refactor: complete refactoring all services
