# src/controllers/authController.js
@@ -1,75 +1,100 @@
-// import httpStatus from 'http-status';
-// import {authService, userService, tokenService, emailService} from '../services';
-// import exclude from '../utils/exclude';
-// import {Body, BodyProp, Controller, Post, Query, Route, SuccessResponse} from "tsoa";
-// import {RegisterRequestDto} from "../dtos/registerRequestDto";
-// import {LoginRequestDto} from "../dtos/loginRequestDto";
-// import {AuthTokensResponse} from "../types/response";
-// import {SendVerificationEmailRequestDto} from "../dtos/sendVerificationEmailRequestDto";
-//
-// @Route('/auth')
-// export class AuthController extends Controller {
-//   @Post('v1/register')
-//   @SuccessResponse('201', 'CREATED')
-//   public async register(@Body() request: RegisterRequestDto): Promise<number> {
-//     const user = await userService.createUser(
-//       request.email,
-//       request.password
-//     );
-//     this.setStatus(httpStatus.CREATED);
-//     return user.id;
-//   }
-//
-//   @Post('v1/login')
-//   @SuccessResponse('200', 'OK')
-//   public async login(@Body() request: LoginRequestDto): Promise<AuthTokensResponse> {
-//     const user = await authService.loginUserWithEmailAndPassword(request.email, request.password);
-//     const token = await tokenService.generateAuthTokens(user);
-//     return token;
-//   }
-//
-//   @Post('v1/logout')
-//   @SuccessResponse('204', 'NO_CONTENT')
-//   public async logout(@BodyProp() refreshToken: string): Promise<void> {
-//     await authService.logout(refreshToken);
-//     this.setStatus(httpStatus.NO_CONTENT);
-//   }
-//
-//   @Post('v1/refreshToken')
-//   @SuccessResponse('200', 'OK')
-//   public async refreshToken(@BodyProp() refreshToken: string): Promise<AuthTokensResponse> {
-//     const token = await authService.refreshAuth(refreshToken);
-//     return token;
-//   }
-//
-//   @Post('v1/forgotPassword')
-//   @SuccessResponse('204', 'NO_CONTENT')
-//   public async forgotPassword(@BodyProp() email: string): Promise<void> {
-//     const resetPasswordToken = await tokenService.generateResetPasswordToken(email);
-//     await emailService.sendResetPasswordEmail(email, resetPasswordToken);
-//     this.setStatus(httpStatus.NO_CONTENT);
-//   }
-//
-//   @Post('v1/resetPassword')
-//   @SuccessResponse('204', 'NO_CONTENT')
-//   public async resetPassword(@Query() token: string, @BodyProp() email: string): Promise<void> {
-//     await authService.resetPassword(token, email);
-//     this.setStatus(httpStatus.NO_CONTENT);
-//   }
-//
-//   @Post('v1/sendVerificationEmail')
-//   @SuccessResponse('204', 'NO_CONTENT')
-//   public async sendVerificationEmail(@Body() request: SendVerificationEmailRequestDto): Promise<void> {
-//     const verifyEmailToken = await tokenService.generateVerifyEmailToken({id: request.id});
-//     await emailService.sendVerificationEmail(request.email, verifyEmailToken);
-//     this.setStatus(httpStatus.NO_CONTENT);
-//   }
-//
-//   @Post('v1/verifyEmail')
-//   @SuccessResponse('204', 'NO_CONTENT')
-//   public async verifyEmail(@Query() token: string): Promise<void> {
-//     await authService.verifyEmail(token);
-//     this.setStatus(httpStatus.NO_CONTENT);
-//   }
-// }
+"use strict";
+var __decorate = (this && this.__decorate) || function (decorators, target, key, desc) {
+    var c = arguments.length, r = c < 3 ? target : desc === null ? desc = Object.getOwnPropertyDescriptor(target, key) : desc, d;
+    if (typeof Reflect === "object" && typeof Reflect.decorate === "function") r = Reflect.decorate(decorators, target, key, desc);
+    else for (var i = decorators.length - 1; i >= 0; i--) if (d = decorators[i]) r = (c < 3 ? d(r) : c > 3 ? d(target, key, r) : d(target, key)) || r;
+    return c > 3 && r && Object.defineProperty(target, key, r), r;
+};
+var __metadata = (this && this.__metadata) || function (k, v) {
+    if (typeof Reflect === "object" && typeof Reflect.metadata === "function") return Reflect.metadata(k, v);
+};
+var __param = (this && this.__param) || function (paramIndex, decorator) {
+    return function (target, key) { decorator(target, key, paramIndex); }
+};
+var __awaiter = (this && this.__awaiter) || function (thisArg, _arguments, P, generator) {
+    function adopt(value) { return value instanceof P ? value : new P(function (resolve) { resolve(value); }); }
+    return new (P || (P = Promise))(function (resolve, reject) {
+        function fulfilled(value) { try { step(generator.next(value)); } catch (e) { reject(e); } }
+        function rejected(value) { try { step(generator["throw"](value)); } catch (e) { reject(e); } }
+        function step(result) { result.done ? resolve(result.value) : adopt(result.value).then(fulfilled, rejected); }
+        step((generator = generator.apply(thisArg, _arguments || [])).next());
+    });
+};
+var __importDefault = (this && this.__importDefault) || function (mod) {
+    return (mod && mod.__esModule) ? mod : { "default": mod };
+};
+Object.defineProperty(exports, "__esModule", { value: true });
+exports.AuthController = void 0;
+const http_status_1 = __importDefault(require("http-status"));
+const services_1 = require("../services");
+const tsoa_1 = require("tsoa");
+const role_1 = require("../enums/role");
+let AuthController = class AuthController extends tsoa_1.Controller {
+    register(request) {
+        return __awaiter(this, void 0, void 0, function* () {
+            const user = yield services_1.userService.createUser({
+                email: request.email,
+                name: request.name,
+                password: request.password,
+                role: role_1.Role.USER
+            });
+            this.setStatus(http_status_1.default.CREATED);
+            return user.id;
+        });
+    }
+    login(request) {
+        return __awaiter(this, void 0, void 0, function* () {
+            const token = yield services_1.authService.login(request.email, request.password);
+            return token;
+        });
+    }
+    logout(refreshToken) {
+        return __awaiter(this, void 0, void 0, function* () {
+            yield services_1.authService.logout(refreshToken);
+            this.setStatus(http_status_1.default.NO_CONTENT);
+        });
+    }
+    refreshToken(refreshToken) {
+        return __awaiter(this, void 0, void 0, function* () {
+            const token = yield services_1.authService.refreshToken(refreshToken);
+            return token;
+        });
+    }
+};
+exports.AuthController = AuthController;
+__decorate([
+    (0, tsoa_1.Post)('v1/register'),
+    (0, tsoa_1.SuccessResponse)('201', 'CREATED'),
+    __param(0, (0, tsoa_1.Body)()),
+    __metadata("design:type", Function),
+    __metadata("design:paramtypes", [Object]),
+    __metadata("design:returntype", Promise)
+], AuthController.prototype, "register", null);
+__decorate([
+    (0, tsoa_1.Post)('v1/login'),
+    (0, tsoa_1.SuccessResponse)('200', 'OK'),
+    __param(0, (0, tsoa_1.Body)()),
+    __metadata("design:type", Function),
+    __metadata("design:paramtypes", [Object]),
+    __metadata("design:returntype", Promise)
+], AuthController.prototype, "login", null);
+__decorate([
+    (0, tsoa_1.Post)('v1/logout'),
+    (0, tsoa_1.SuccessResponse)('204', 'NO_CONTENT'),
+    __param(0, (0, tsoa_1.BodyProp)()),
+    __metadata("design:type", Function),
+    __metadata("design:paramtypes", [String]),
+    __metadata("design:returntype", Promise)
+], AuthController.prototype, "logout", null);
+__decorate([
+    (0, tsoa_1.Post)('v1/refreshToken'),
+    (0, tsoa_1.SuccessResponse)('200', 'OK'),
+    __param(0, (0, tsoa_1.BodyProp)()),
+    __metadata("design:type", Function),
+    __metadata("design:paramtypes", [String]),
+    __metadata("design:returntype", Promise)
+], AuthController.prototype, "refreshToken", null);
+exports.AuthController = AuthController = __decorate([
+    (0, tsoa_1.Route)('/auth')
+], AuthController);
 //# sourceMappingURL=authController.js.map
