# src/controllers/userController.ts
@@ -2,44 +2,36 @@ import httpStatus from 'http-status';
 import { userService } from '../services';
 import {Body, Controller, Delete, Get, Post, Put, Query, Route, Security, SuccessResponse} from 'tsoa';
 import { CreateUserRequestDto } from '../dtos/createUserRequestDto';
-import { Role } from '../enums/role';
 import NotFoundError from "../types/notFoundError";
 import {User} from "../entities/user";
+import {PagedResultResponse} from "../types/response";
+import {UpdateUserRequestDto} from "../dtos/updateUserRequestDto";
 
 @Route('/user')
 export class UserController extends Controller {
   @Post('v1/create')
+  @Security("jwt")
   @SuccessResponse('201', 'CREATED')
-  public async createUser(@Body() request: CreateUserRequestDto): Promise<number> {
-    const user = await userService.createUser(
-      request.email,
-      request.password,
-      request.name,
-      request.role
-    );
+  public async createUser(@Body() request: CreateUserRequestDto): Promise<User> {
+    const user = await userService.createUser(request);
     this.setStatus(httpStatus.CREATED);
-    return user.id;
+    return user;
   }
 
-  // @Get('v1/get')
-  // @Security("jwt", ["admin"])
-  // @SuccessResponse('200', 'OK')
-  // public async getUsers(
-  //   @Query() name?: string,
-  //   @Query() role?: Role,
-  //   @Query() limit?: number,
-  //   @Query() page?: number,
-  //   @Query() sortBy?: string
-  // ): Promise<void> {
-  //   console.log('we call get endpoint!')
-  //   // const filter = pick(queryParams, ['name', 'role']);
-  //   // const options = pick(queryParams, ['sortBy', 'limit', 'page']);
-  //   // const result = await userService.queryUsers();
-  //   // return result.map(x=>x.id);
-  // }
-  //
+  @Get('v1/get')
+  @Security("jwt")
+  @SuccessResponse('200', 'OK')
+  public async getUsers(
+    @Query() name?: string,
+    @Query() pageSize?: number,
+    @Query() page?: number,
+  ): Promise<PagedResultResponse<User[]>> {
+
+    return  await userService.queryUsers({page: page, pageSize: pageSize,searchTerm: name})
+  }
+
   @Get('v1/get-by-id')
-  // @Security("jwt")
+  @Security("jwt")
   @SuccessResponse('200', 'OK')
   public async getUserById(@Query() id: number): Promise<User> {
     const user = await userService.getUserById(id);
@@ -49,25 +41,27 @@ export class UserController extends Controller {
     return user;
   }
 
-  // @Put('v1/update')
-  // @SuccessResponse('204', 'NO_CONTENT')
-  // public async updateUser(
-  //   @Query() id: number,
-  //   @Body() request: Prisma.UserUpdateInput
-  // ): Promise<number | undefined> {
-  //   const user = await userService.updateUserById(id, request);
-  //   this.setStatus(httpStatus.NO_CONTENT);
-  //   return user?.id;
-  // }
-  //
-  // @Delete('v1/delete')
-  // @SuccessResponse('204', 'NO_CONTENT')
-  // public async deleteUserById(@Query() id: number): Promise<number> {
-  //   const user = await userService.deleteUserById(id);
-  //   if (!user) {
-  //     throw new NotFoundError('User not found');
-  //   }
-  //   this.setStatus(httpStatus.NO_CONTENT);
-  //   return user.id;
-  // }
+  @Put('v1/update')
+  @Security("jwt")
+  @SuccessResponse('204', 'NO_CONTENT')
+  public async updateUser(
+    @Query() id: number,
+    @Body() request: UpdateUserRequestDto
+  ): Promise<User> {
+    const user = await userService.updateUserById(id, request);
+    this.setStatus(httpStatus.NO_CONTENT);
+    return user;
+  }
+
+  @Delete('v1/delete')
+  @Security("jwt")
+  @SuccessResponse('204', 'NO_CONTENT')
+  public async deleteUserById(@Query() id: number): Promise<User> {
+    const user = await userService.deleteUserById(id);
+    if (!user) {
+      throw new NotFoundError('User not found');
+    }
+    this.setStatus(httpStatus.NO_CONTENT);
+    return user;
+  }
 }
