# src/dtos/searchDto.js
@@ -1,0 +1,13 @@
+"use strict";
+Object.defineProperty(exports, "__esModule", { value: true });
+exports.SearchDto = void 0;
+class SearchDto {
+    constructor() {
+        this.page = 1;
+        this.pageSize = 10;
+        this.orderBy = "id";
+        this.order = "desc";
+    }
+}
+exports.SearchDto = SearchDto;
+//# sourceMappingURL=searchDto.js.map
